--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             <meta charset="UTF-8" />
             <link rel="stylesheet" href="index.css">
             <title>소하봇 웹사이트</title>
+            <link rel="shortcut icon" type="image/x-icon" href="img/img.ico">
         </head>
         <body>
             <div class="main">
