--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
         <head>
             <meta charset="UTF-8" />
             <link rel="stylesheet" href="index.css">
+            
             <title>소하봇 웹사이트</title>
+            <link rel="shortcut icon" type="image/x-icon" href="img/img.ico">
          
         </head>
         <body>
